<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirFlo</string>
    <string name="about">About this App</string>
    <string name="about_close_button">Close</string>
    <string name="title_flight_detail_activity">Flight Detail</string>
    <string name="title_flight_detail_prefs">Select Flight Detail Items</string>
    <string name="title_list_preference_activity">Flight List Preferences</string>
    <string name="title_type_preference_activity">Adjust Textsize</string>
    <string name="title_file_preferece_activity">Load Flightbook: /</string>
    <string name="type_pref_cat1_title">Textsize of Main Flightlist</string>
    <string name="type_pref_cat2_title">Textsize of Flight Details</string>
    <string name="type_pref_head_hint">Select the textsize of the first line</string>
    <string name="type_pref_head_title">Main Header</string>
    <string name="type_pref_body_hint">Select the textsize of the second line</string>
    <string name="type_pref_body_title">Main Body</string>
    <string name="type_pref_detail_hint">Select the textsize of flightdetails</string>
    <string name="type_pref_detail_title">Flightdetails</string>
    <string name="list_pref_cat1_title">Items in first Line</string>
    <string name="list_pref_cat2_title">Items in second Line</string>
    <string name="list_pref_hint_selector">"Select Item no. "</string>
    <string name="list_pref_empty_field">None</string>
    <string name="file_pref_message_nozip">Only .zip Files allowed!</string>
    <string name="list_pref_sort_ascending">Ascending</string>
    <string name="list_pref_sort_decending">Decending</string>
    <string name="list_pref_sort_sequence">Sort Sequence</string>
    <string name="list_pref_sort_criterium">Sort Criteria</string>
    <string name="list_pref_cat_sort_title">Sorting Preferences</string>
    <string name="main_menu_prefdetail">Flight Detail Preferences</string>
    <string name="main_menu_preflist">Flight List Preferences</string>
    <string name="main_menu_loadbook">Load FlightBook</string>
    <string name="main_menu_typesize">Adjust Textsize</string>
    <string name="detail_pref_empty">--Hide empty fields in flight details--</string>
    <string name="number">Flightnumber</string>
    <string name="pilot">Pilot</string>
    <string name="date">Flight Date</string>
    <string name="country">Country</string>
    <string name="site">Site</string>
    <string name="site2">Launch Site</string>
    <string name="landingsite">Landing Site</string>
    <string name="starttime">Launch Time</string>
    <string name="UTCorr">UTC Launch Time</string>
    <string name="duration">Flighttime</string>
    <string name="landingtime">Landing Time</string>
    <string name="startheight">Start Height</string>
    <string name="maxheight">Maximum Height</string>
    <string name="landheight">Landing Height</string>
    <string name="heightgain">Height Gain</string>
    <string name="starttype">Start Type</string>
    <string name="avgspeed">OLC Speed</string>
    <string name="maxvario">Maximum Climb</string>
    <string name="minvario">Maximum Sink</string>
    <string name="glidertyp">Glider Type</string>
    <string name="gliderID">Glider ID</string>
    <string name="GPSID">GPS Device</string>
    <string name="compID">Competition ID</string>
    <string name="compClass">Competition Class</string>
    <string name="comment">Comment</string>
    <string name="olc">OLC</string>
    <string name="tag">Tag</string>
    <string name="olcfree">Free Flight</string>
    <string name="olctri">Free Triangle</string>
    <string name="olcfia">FAI Triangle</string>
    <string name="start_mountain">Mountain</string>
    <string name="start_winch">Winch</string>
    <string name="start_ultralight">Ultralight</string>
    <string name="start_other">Other</string>
    <string name="start_powered">Powered</string>
    <string name="start_estart">E-Start</string>
    <string name="start_ground">Groundhandling</string>
    <string name="authors_note">        Contact: pulce@gmx.at \n
        Copyright 2013 \n
        by Florian Hauser</string>
    <string name="legal_notice">    Credits go out to Lars Seifert for 
    support and for supplying the original AirTome tag icons.
    \n
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version. \n

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details. \n
    
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/.</string>

</resources>