<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/list_pref_cat1_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="listheadnumber"
            android:title="@string/number" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="listheaddate"
            android:title="@string/date" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="listheadsite"
            android:title="@string/site" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="listheadsite2"
            android:title="@string/site2" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="listheadlandingsite"
            android:title="@string/landingsite" />

   </PreferenceCategory>

    <PreferenceCategory android:title="@string/list_pref_cat2_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="listprefnumber"
            android:title="@string/number" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="listprefdate"
            android:title="@string/date" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="listprefsite"
            android:title="@string/site" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="listprefsite2"
            android:title="@string/site2" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="listpreflandingsite"
            android:title="@string/landingsite" />

    </PreferenceCategory>
    
</PreferenceScreen>