<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="*" >

    <TableRow>

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/launcher_airflo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left" />

            <TextView
                android:id="@+id/textcp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authors_note"
                android:gravity="left" />

        </LinearLayout>

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/legal_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:layout_span="2"
            android:text="@string/legal_notice"
            android:textSize="10sp"
            android:textStyle="italic" />
    </TableRow>

    <Button
        android:id="@+id/confButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_close_button" />


</TableLayout>

